# AccessDoc

./: .dockerignore  .env.example  .gitignore  .vercelignore  ACCESSIBILITY.md  ARTIFACT_LEDGER.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION_LEDGER.md  COMPLETION_STATUS.md  CONTRIBUTING.md  Dockerfile  FINAL_HANDOFF.md  GOVERNANCE.md  GUMLOOP_PROMPTS.md  LICENSE  LOOP.md  MAINTAINERS.md  Makefile  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SKILL.md  STATE.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  action.yml  cli.py  docker-compose.yml  fly.toml  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements.txt  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
api/: bundle.py  handler.py
app/: bundle.py  catalog.py  eaa.py  enrich.py  html_report.py  intoto.py  main.py  manual.py  models.py  openacr.py  parser.py  receipt.py  reporter.py  sarif.py  scan.py  service.py  store.py  timeseries.py  vpat.py
docs/: 100X_ROADMAP.md  ADR-001-NAMING.md  API_V1.md  ARCHITECTURE.md  CLAIMS_POLICY.md  DEPLOYMENT_RUNBOOK.md  EVALUATION_PROTOCOL.md  GITHUB_PUBLICATION_CHECKLIST.md  HTML_COMPANION.md  LOCAL_STRESS_TESTING.md  OPERATOR_COMPLIANCE_NOTE.md  PRIVACY.md  PRODUCTION_READINESS.md  RECEIPT_FORMAT.md  RELEASE_GATES.md  RELEASE_PROCESS.md  ROLLBACK_RUNBOOK.md  SERVERLESS_SECURITY.md  THREAT_MODEL.md  VERCEL_DEPLOYMENT.md
fixtures/: axe-sample.json
gumloop/: CHAT_PROMPT.md  FINAL_CHAT_PROMPT.md  SYSTEM_PROMPT.md  WAR_ROOM_CHAT_PROMPT.md  WAR_ROOM_SYSTEM_PROMPT.md  WORKFLOW_BLUEPRINT.md
mcp/: server.py
public/: index.html
scripts/: accessibility_e2e.js  (+10 more)
(+45 files in other folders)
